--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   swift_format:
     name: swift-format
-    runs-on: macOS-11
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
       - name: Install
