--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install
         run: |
-          brew tap maximkrouk/formulae
+          brew tap edudo-inc/formulae
           brew install Formulae/swift-format
       - name: Format
         run: make format
